# chillmap_backend

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile_Django  Dockerfile_Jenkins  Dockerfile_Vue  Jenkinsfile  Makefile  TASK.md  app_config.yml  docker-compose.yml  docker-compose_prod.yml  nginx.conf  playbook.yaml  post_push.yml  pyproject.toml  readme.md  tasks.py
ansible/: delete_pgdata.yml  dump_api.yml  install_invoke_and_docker_compose.yml  inventory copy.yml  playbook.yml  publush.yml  send_files_app.yml
api/: admin.py  filters.py  serializers.py  urls.py  views.py
backend/: Makefile  pyproject.toml  readme.md
backend/api/: admin.py  filters.py  pagination.py  serializers.py  urls.py  utils.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_arialinmap_id_alter_channelgeomap_id_and_more.py  0002_remove_placeinmap_group_place_and_more.py  0003_alter_arialinmap_id_alter_channelgeomap_id_and_more.py  0004_alter_arialinmap_id_alter_channelgeomap_id_and_more.py  0005_typepermissiontoken_tokenpermission.py
backend/api/models/: base_model.py  geomap.py
backend/api/serializers/: __init__.py  serializers.py  serializers_mod.py
backend/api/templates/admin/: change_form.html
backend/api/tests/: test_api.py
backend/conf/: settings.py  settings_local.py  urls.py  views.py
backend/fixtures/: 95.163.237.188api.json  api.json  user.json
backend/static/rest_framework/css/: default.css
conf/: settings.py  settings_local.py  urls.py
conf_build/: Dockerfile_Django_Dev  Dockerfile_Django_Prod  Dockerfile_Vue_Build
dev_conf/: .env  (+6 more)
(+52 files in other folders)
